--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Daniel Paiva",email = "daniel@nuvemlabs.co.nz"}
 ]
 readme = "README.md"
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.9.2,<4.0"
 dependencies = [
     "langchain (>=0.3.25,<0.4.0)",
     "langchain-community (>=0.3.24,<0.4.0)",
@@ -18,7 +18,8 @@ dependencies = [
     "typer (>=0.16.0,<0.17.0)",
     "pydantic-settings (>=2.0.0,<3.0.0)",
     "pyyaml (>=6.0.0,<7.0.0)",
-    "google-search-results (>=2.4.0,<3.0.0)"
+    "google-search-results (>=2.4.0,<3.0.0)",
+    "langchain-ragie (>=0.3.2,<0.4.0)"
 ]
 
 [tool.poetry]
